kubernetes/grafana/02-grafana.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: grafana
  namespace: tools
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: grafana
        proc: webserver
        k8s-app: grafana
    spec:
      containers:
      - name: grafana
        image:  grafana/grafana
        ports:
        - name: grafana
          containerPort: 3000
