kubernetes/grafana/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: tools
  labels:
    k8s-app: grafana-service
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "GrafanaService"
spec:
  selector:
    k8s-app: grafana
  ports:
  - name: grafana
    port: 3000
    protocol: TCP
