kubernetes/grafana/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: grafana
  name: grafana
  namespace: elasticsearch
spec:
  clusterIP: 10.233.33.216
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    component: grafana
