kubernetes/grafana/04-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: tools
spec:
  rules:
  - host: grafana.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
